gcc/testsuite/rust/rustc/ui/suggestions/type-not-found-in-adt-field.rs
struct Struct {
    m: Vec<Someunknownname<String, ()>>, // { dg-error ".E0412." "" { target *-*-* } }
// { dg-note ".E0412." "" { target *-*-* } .-1 }
}
struct OtherStruct { // { help "" "" { target *-*-* } }
    m: K, // { dg-error ".E0412." "" { target *-*-* } }
// { dg-note ".E0412." "" { target *-*-* } .-1 }
}
fn main() {}

